--- a/index.html
+++ b/index.html
@@ -31,19 +31,51 @@
                 <div class="title">
                     <h1>Header</h1>
                 </div>
-                <div class="hamburger_menu">
-                    <span id="hamburger">
-                        <i class="fas fa-bars"></i>
-                    </span>
-                    <div class="hamburger_dropdown">
-                        <ul>
-                            <li><a href="">Link</a></li>
-                            <li><a href="">Link</a></li>
-                            <li><a href="">Link</a></li>
-                            <li><a href="">Link</a></li>
-                            <li><a href="">Link</a></li>
-                            <li><a href="">Link</a></li>
-                        </ul>
+                <div class="blocco_hamb">
+                    <div class="hamburger_menu">
+                        <span id="hambOne" class="hamburger">
+                            <i class="fas fa-bars"></i>
+                        </span>
+                        <div id="dropOne" class="dropdown">
+                            <ul>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="hamburger_menu">
+                        <span id="hambTwo" class="hamburger">
+                            <i class="fas fa-bars"></i>
+                        </span>
+                        <div id="dropTwo" class="dropdown">
+                            <ul>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="hamburger_menu">
+                        <span id="hambThree" class="hamburger">
+                            <i class="fas fa-bars"></i>
+                        </span>
+                        <div id="dropThree" class="dropdown">
+                            <ul>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                                <li><a href="">Link</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -68,7 +100,7 @@
                         <i class="fas fa-chevron-right"></i>
                     </div>
                 </div>
-                
+
                 <div class="circles">
                     <a class="circle first focused" href="">
                         <i class="far fa-circle"></i>
